# Mindful

./: .gitignore  README.md  database.py  env.sample  install.sh  llm.py  main.py  pyproject.toml  rag_poc.py  schemas.py  security.py  server_launch.py  text_splitter_poc.py
routes/: __init__.py  notes.py  vectorstore.py
