[project]
name = "mindful"
version = "0.1.0"
description = "Mindful is a Note Taking application with a focus on simplicity and ease of use."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1.0",
    "fastapi>=0.115.8",
    "motor>=3.7.0",
    "passlib>=1.7.4",
    "pydantic>=2.10.6",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[project.scripts]

